# handelsplatz

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp  restAPI.cpp
extra/: client.py  server.py
include/: handelsgueter.hpp  handelsplatz.hpp  marketPlace.hpp  nutzer.hpp
src/: handelsgueter.cpp  handelsplatz.cpp  marketPlace.cpp  nutzer.cpp
test/: handelsgueterTest.cpp  marketPlaceTest.cpp  nutzerTest.cpp
